[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["api-all", "system-tray", "updater"] }
auto-launch = "0.3.0"
sysinfo = "0.28.4"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
magic-crypt = "3.1.10"
keyring = "1.2.0"
once_cell = "1.15.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace" }
rand = "0.8.5"
google_authenticator_converter = { path = "crates/google_authenticator_converter" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size

[workspace]

members = [
    "crates/*",
]
